<resources>
    <string name="app_name">CoroutinesDemo</string>
    <string name="enter_words">Enter Words</string>
    <string name="enter_your_name">Add name in DB</string>
    <string name="cancel_alarm">Cancel alarm</string>
    <string name="no_alarm_service">NO Alarm service</string>
    <string name="stop_service">Stop Service</string>
    <string name="random_number_is">Random Number</string>
    <string name="refresh">Refresh</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="normal">Normal</string>
    <string name="click_to_add_geofence">Click to add geofence</string>
    <string name="remove_gfnce">Remove GFNCE</string>
    <string name="start">Start</string>
    <string name="permission_required">Camera access is required to display the camera preview.</string>
    <string name="permission_granted">Permission is granted. You can use the camera now.</string>
    <string name="ok">OK</string>
    <string name="send_result">Send Result</string>
    <string name="launch_image_picker">Launch Image Picker</string>
    <string name="dummy_text">Dummy text</string>
    <string name="take_picture">Take Picture</string>
    <string name="slide_up_to_move_dog_towards_the_bone">Slide Up to move dog towards the bone</string>
    <string name="slide_down_to_move_dog_away_from_bone">Slide Down to move dog away from bone</string>
    <string name="bottom_sheet_element_1">Location 1</string>
    <string name="bottom_sheet_element_2">Location2 </string>
    <string name="bottom_sheet_element_3">Location 3</string>
    <string name="show_bottom_sheet">Show Bottom Sheet</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="right_drawer">This is right drawer</string>
    <string name="navigation_drawer_tut">Navigation drawer</string>
    <string name="activity">Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="run">Run</string>
    <string name="this_is_fragment_1">This is fragment 1</string>
    <string name="this_is_fragment_2">This is Fragment 2</string>
    <string name="this_is_fragment_3">This is fragment 3</string>
    <string name="open_activity">Open Activity</string>
    <string name="this_is_dummy_activity">This is dummy activity</string>
    <string name="you_have_just_opened_activity_2">You have just opened activity 2</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">UserName</string>
    <string name="user">Username</string>
    <string name="textview">Sign up to ensure you do not miss any promotional event and can get benefit for the same.</string>
    <string name="stay_with_your_business">Stay with your business</string>
    <string name="next">Next</string>
    <string name="show_snackbar">Show Snackbar</string>
    <string name="shoes_2_5">Shoes 2*5 and 4*7</string>
    <string name="place_the_order">Place the order</string>
    <string name="_67676">67676 $</string>
    <string name="login">Login</string>
    <string name="vibha_thakur">Vibha Thakur</string>
    <string name="_699_555_1122">(699) 555-1122</string>
    <string name="mobile">Mobile</string>
    <string name="swipe_up_and_down_for_persistent_bottom_sheet">Swipe up and down for bottom sheet</string>
    <string name="user_1">User 1</string>
    <string name="add_2">Add 2</string>
    <string name="add_1">Add 1</string>
    <string name="add_3">Add 3</string>
    <string name="response">Response:</string>
    <string name="action_settings">Settings</string>
    <string name="preview_description">Image and Video preview will appear here</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="btn_record_video">Record Video</string>
    <string name="crop_image">Crop Image</string>
    <string name="take_video">Take video</string>
    <string name="permissions">Permissions</string>
    <string name="app_title">Hi, how are you</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="navigation_to_3">Navigation to 3</string>
    <string name="navigate">Navigate</string>
    <string name="launch_second_activity">Launch Second activity</string>
    <string name="show_dialog">Show Dialog</string>

</resources>