<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".coroutines.maps.demomaps.codelabmap.maps.permissions.PermissionsActivity">

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnImagePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <TextView
        android:id="@+id/tvTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/dummy_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="@+id/btnStart"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/btnStart" />

    <Button
        android:id="@+id/btnImagePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/launch_image_picker"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnSetAction"
        app:layout_constraintEnd_toEndOf="@+id/btnStart"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="@+id/btnStart" />

    <ImageView
        android:id="@+id/ivResult"
        android:layout_width="182dp"
        android:layout_height="142dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="@+id/btnStart"
        app:layout_constraintStart_toStartOf="@+id/btnStart"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnSetAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="Set action"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnImagePicker"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="@+id/btnImagePicker" />

</androidx.constraintlayout.widget.ConstraintLayout>