<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".coroutines.maps.demomaps.codelabmap.maps.camera.CameraActivity">



    <Button
        android:id="@+id/btnTakePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:text="@string/app_title"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnCompress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capturedImage"
        app:layout_constraintVertical_bias="0.082" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/capturedImage"
        android:layout_width="377dp"
        android:layout_height="292dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_baseline_location_on_24"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCaptureVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:background="@drawable/button_background"
        android:text="@string/take_video"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnCompress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCrop" />

    <Button
        android:id="@+id/btnCrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/crop_image"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnCompress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/btnTakePicture"
        app:layout_constraintTop_toTopOf="@+id/btnTakePicture"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnPermissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/permissions"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnCompress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/btnCaptureVideo"
        app:layout_constraintTop_toBottomOf="@+id/btnCrop" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivLastCaptured"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:layout_marginBottom="36dp"
        android:src="@drawable/ic_baseline_run_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCompress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_background"
        android:text="Compress Image"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/ivLastCaptured"
        app:layout_constraintStart_toStartOf="@+id/btnCaptureVideo" />

</androidx.constraintlayout.widget.ConstraintLayout>